scenario-4/dumps/cluster-1/02-istio-config/destinationrule.transit.tier1-transit-mid-gwecho-echo-tr-svc-cluster-local.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"gateway.xcp.tetrate.io/v2","kind":"Gateway","metadata":{"annotations":{},"labels":{"xcp.tetrate.io/gatewayGroup":"transit-mid-gg","xcp.tetrate.io/workspace":"transit-ws"},"name":"transit-mid-gw","namespace":"xcp-system"},"spec":{"http":[{"hostname":"echo.echo-tr.svc.cluster.local","name":"transit-hop","routing":{"rules":[{"route":{"clusterDestination":{"clusters":[{"name":"cluster-2","weight":100}]}}}]},"transit":true}],"workloadSelector":{"labels":{"app":"transit-tier1-gate [...]
    xcp.tetrate.io/contentHash: 6f2dd36a46c3650b8c6984133099b367
  creationTimestamp: "2026-05-28T15:04:36Z"
  generation: 1
  labels:
    istio.io/rev: global
    xcp.tetrate.io/gatewayGroup: transit-mid-gg
    xcp.tetrate.io/workspace: transit-ws
  managedFields:
  - apiVersion: networking.istio.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          .: {}
          f:kubectl.kubernetes.io/last-applied-configuration: {}
          f:xcp.tetrate.io/contentHash: {}
        f:labels:
          .: {}
          f:istio.io/rev: {}
          f:xcp.tetrate.io/gatewayGroup: {}
          f:xcp.tetrate.io/workspace: {}
      f:spec:
        .: {}
        f:exportTo: {}
        f:host: {}
        f:subsets: {}
        f:workloadSelector:
          .: {}
          f:matchLabels:
            .: {}
            f:app: {}
    manager: xcpd
    operation: Update
    time: "2026-05-28T15:04:36Z"
  - apiVersion: networking.istio.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:status:
        .: {}
        f:observedGeneration: {}
        f:validationMessages: {}
    manager: pilot-discovery
    operation: Update
    subresource: status
    time: "2026-05-28T15:04:38Z"
  name: tier1-transit-mid-gwecho-echo-tr-svc-cluster-local
  namespace: transit
  resourceVersion: "972526"
  uid: ef1b1c28-5b5f-49b9-a28b-26b635bff222
spec:
  exportTo:
  - .
  host: echo.echo-tr.svc.cluster.local
  subsets:
  - labels:
      xcp.tetrate.io/cluster: cluster-2
      xcp.tetrate.io/svc-port-80: "true"
    name: transit-mid-gw-transit-hop-internal-0
    trafficPolicy:
      portLevelSettings:
      - connectionPool:
          http:
            useClientProtocol: true
        loadBalancer:
          localityLbSetting:
            enabled: true
            failoverPriority:
            - topology.kubernetes.io/region
            - topology.istio.io/network
            - topology.kubernetes.io/zone
            - topology.istio.io/subzone
        outlierDetection:
          consecutiveGatewayErrors: 10
          maxEjectionPercent: 100
        port:
          number: 80
        tls:
          mode: ISTIO_MUTUAL
          sni: echo.echo-tr.svc.cluster.local
  workloadSelector:
    matchLabels:
      app: transit-tier1-gateway
status:
  observedGeneration: "1"
  validationMessages:
  - documentationUrl: https://istio.io/v1.28/docs/reference/config/analysis/ist0173/
    level: ERROR
    type:
      code: IST0173
